--- a/OCR/templates/common/menu.html
+++ b/OCR/templates/common/menu.html
@@ -13,7 +13,7 @@
           <a class="nav-link active" aria-current="page" href="{% url 'student_page' %}">Student</a>
         </li>
         <li class="nav-item" >
-          <a class="nav-link active" aria-current="page" href="#">Faculty</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'faculty_page' %}">Faculty</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Admin</a>
