--- a/AWS/project17/templates/delete_student.html
+++ b/AWS/project17/templates/delete_student.html
@@ -1,3 +1,6 @@
+
+
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -8,31 +11,51 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-   <title>Sathya tech</title>
-      <table align="center" border="2" width="80%">
-        <tr>
-            <th style="text-align: center;font-size: 30px;font-family:'Agency FB';">
-                Sathya Tech
-            </th>
-        </tr>
-        <tr>
-            <th>
-                {% block menu %}
-                    {% include 'menu.html' %}
-                {% endblock %}
-            </th>
-        </tr>
-        <tr>
-            <th>
-                {% block content %}
 
-                {% endblock %}
-            </th>
-        </tr>
-
-    </table>
   </head>
   <body>
+  <table align="center" border="2">
+      <tr>
+          <th colspan="2">Delete Student Information</th>
+      </tr>
+      <tr>
+          <th rowspan="5">
+              <img src="{{ student_info.photo.url }}" width="250" height="250">
+          </th>
+          <th>Student Number: {{ student_info.number }}</th>
+      </tr>
+
+      <tr>
+          <th>Student Name: {{ student_info.name }}</th>
+      </tr>
+
+      <tr>
+          <th>Student Contact: {{ student_info.contact }}</th>
+      </tr>
+
+      <tr>
+          <th>Student DOB: {{ student_info.dob }}</th>
+      </tr>
+
+      <tr>
+          <th>Student Date of Regis: {{ student_info.date_of_reg }}</th>
+      </tr>
+
+      <tr>
+          <th>
+              <form action="{% url 'admin' %}">
+                  <button type="submit" class="btn-primary">Cancel</button>
+              </form>
+          </th>
+          <th>
+              <form action="{% url 'delete_student' student_info.number %}" method="post">
+                  {% csrf_token %}
+                  <button type="submit" class="btn-danger"> Delete</button>
+              </form>
+          </th>
+      </tr>
+
+  </table>
 
 
     <!-- Optional JavaScript; choose one of the two! -->
